DataBase & DataBase Updater

--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -2,7 +2,7 @@
 #MySQL Options
 db.password=root
 db.username=root
-db.url=jdbc:mysql://localhost:3306/testspring
+db.url=jdbc:mysql://localhost:3306/tm-development
 db.driver=com.mysql.jdbc.Driver
 
 
